# Butter

./: .gitignore  app.py  comm.py  main.py  pyproject.toml  readme.md  serverConfig.py
app/: app.py  comm.py  serverConfig.py  state.py
src/: main.py
src/app/: app.py  background.py  comm.py  serverConfig.py  state.py
src/view/: index.html
src/view/lib/: global.css  gui.js
static/: index.html
view/: index.html
